Add formatters. Move files.

--- a/sample/Lob.Net.Sample/Lob.Net.Sample.csproj
+++ b/sample/Lob.Net.Sample/Lob.Net.Sample.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Lob.Net.csproj" />
+    <ProjectReference Include="..\..\src\Lob.Net\Lob.Net.csproj" />
   </ItemGroup>
 
   <ItemGroup>
