--- a/test/Lob.Net.Formatters.Tests/Lob.Net.Formatters.Tests.csproj
+++ b/test/Lob.Net.Formatters.Tests/Lob.Net.Formatters.Tests.csproj
@@ -12,12 +12,12 @@
     <PackageReference Include="Microsoft.Extensions.Options" Version="2.1.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
     <PackageReference Include="Moq" Version="4.10.0" />
-    <PackageReference Include="RichardSzalay.MockHttp" Version="5.0.0" />
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\Lob.Net.Formatters\Lob.Net.Formatters.csproj" />
     <ProjectReference Include="..\..\src\Lob.Net\Lob.Net.csproj" />
   </ItemGroup>
 
